# torch-spyre

./: .gitignore  CLAUDE.md  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/: actionlint.yaml  runner_overrides.yaml
.github/scripts/: ingest_hw_diagnostics.py  ingest_model_ops.py  ingest_xml.py  parse_hw_failures.py  parse_model_ops_logs.py
.github/workflows/: _test_matrix.yaml  check-test-ci-coverage.yaml  config_integrity_checker.yaml  dependabot.yaml  integration-tests.yaml  model_modules_tests.yaml  model_ops_tests.yaml  push-hw-diagnostics-to-clickhouse.yaml  push-model-ops-logs-to-clickhouse.yaml  push-to-clickhouse.yaml  runtests_nightly.yaml  torch_spyre_tests.yaml  (+2 more)
docs/: requirements.txt
examples/: gather_exp.py  gather_exp_broadcast_index.py  gather_exp_broadcast_value.py
requirements/: dev.txt
tests/: conftest.py  oot_test_config_models.py  run_test.sh  spyre_test_config_schema.json  spyre_test_constants.py  test_allocator_e2e.py  test_launch_jobplan.py  test_logging_patterns.py  test_memory_pressure_gc.py  test_modules.py  test_prepare_kernel.py  test_spyre.py  test_spyre_generator.py  test_spyre_lazy_init.py
tests/oot_framework/: __init__.py  oot_test_base_common.py  oot_test_common_methods_invocations.py  oot_test_config_models.py  oot_test_constants.py  oot_test_matching.py  oot_test_parsing.py  oot_test_utilities.py  oot_upstream_patcher.py  pyproject.toml  run_test.sh
tests/oot_framework/utils/: filter_configs.py
tools/: ffdc_trigger.py
torch_spyre/: _C.pyi  __init__.py  _monkey_patch.py  logging_config.py  model_utils.py
(+402 files in other folders)
